--- a/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
+++ b/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
@@ -1,5 +1,5 @@
 $TTL 86400
-{% set current_nameserver = nameservers | selectattr('name', 'equalto', ansible_fqdn) | first %}
+{% set current_nameserver = nameservers | selectattr('name', 'equalto', inventory_hostname_short) | first %}
 
 @   IN  SOA     {{ current_nameserver.name }}.{{ current_nameserver.zone }}. admin.{{ current_nameserver.zone }}. (
         {{ "%Y%m%d%H" | strftime }}01 ; Serial
@@ -15,7 +15,7 @@ $TTL 86400
 
 ; DNS PTR Records
 {% for record in dns_records | selectattr('zone', 'equalto', '1.0.10.in-addr.arpa.') | selectattr('type', 'equalto', 'PTR') | selectattr('type', 'equalto', 'ptr') %}
-{{ record.ip_suffix }} IN {{ record.type }}  {{ record.host }}   IN    
+{{ record.ip_suffix }} IN {{ record.type }}  {{ record.host }}
 {% endfor %}
 
 #11    PTR ns1.30.1.10.in-addr.arpa.
