--- a/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
+++ b/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
@@ -2,11 +2,12 @@ $TTL 86400
 {% set current_nameserver = nameservers | selectattr('name', 'equalto', inventory_hostname_short) | first %}
 
 @   IN  SOA     {{ current_nameserver.name }}.{{ current_nameserver.zone }}. admin.{{ current_nameserver.zone }}. (
-        {{ "%Y%m%d%H" | strftime }}01 ; Serial
-        3600       ; Refresh
-        1800       ; Retry
-        1209600    ; Expire
-        86400 )    ; Minimum TTL
+        {{ "%Y%m%d%H" | strftime }}01 ; serial
+        3600       ; refresh
+        1800       ; retry
+        1209600    ; expire
+        86400      ; minimum
+)
 
 ; Define Name Servers
 {% for ns in nameservers %}
@@ -14,8 +15,6 @@ $TTL 86400
 {% endfor %}
 
 ; DNS PTR Records
-{% for record in dns_records | selectattr('zone', 'equalto', '1.0.10.in-addr.arpa.') | selectattr('type', 'equalto', 'PTR') | selectattr('type', 'equalto', 'ptr') %}
-{{ record.ip_suffix }} IN {{ record.type }}  {{ record.host }}
+{% for record in dns_records | selectattr('zone', 'equalto', '1.0.10.in-addr.arpa.') %}
+{{ record.ip_suffix }} IN PTR {{ record.host }}.{{ record.zone }}.
 {% endfor %}
-
-#11    PTR ns1.30.1.10.in-addr.arpa.
