--- a/ansible/playbooks/dns/templates/db.trahan.dev.j2
+++ b/ansible/playbooks/dns/templates/db.trahan.dev.j2
@@ -2,11 +2,12 @@ $TTL 86400
 {% set current_nameserver = nameservers | selectattr('name', 'equalto', inventory_hostname_short) | first %}
 
 @   IN  SOA     {{ current_nameserver.name }}.{{ current_nameserver.zone }}. admin.{{ current_nameserver.zone }}. (
-        {{ "%Y%m%d%H" | strftime }}01 ; Serial
-        3600       ; Refresh
-        1800       ; Retry
-        1209600    ; Expire
-        86400 )    ; Minimum TTL
+        {{ "%Y%m%d%H" | strftime }}01 ; serial
+        3600       ; refresh
+        1800       ; retry
+        1209600    ; expire
+        86400      ; minimum
+		)
 
 ; Define Name Servers
 {% for ns in nameservers %}
