Cleaning up dns jinja templates

--- a/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
+++ b/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
@@ -11,7 +11,7 @@ $TTL 86400
 
 ; Define Name Servers
 {% for ns in nameservers %}
-@   IN  NS      {{ ns.name }}.{{ ns.zone }}.
+@   IN  NS      {{ ns.ns_name }}.{{ ns.zone }}.
 {% endfor %}
 
 ; DNS PTR Records
