--- a/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
+++ b/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
@@ -16,5 +16,5 @@ $TTL 86400
 
 ; DNS PTR Records
 {% for record in dns_records | selectattr('zone', 'equalto', '1.0.10.in-addr.arpa.') %}
-{{ record.ip_suffix }}  IN  {{ record.type }}       {{ record.host }}
+{{ record.record_value }}  IN  {{ record.type }}       {{ record.host }}
 {% endfor %}
