--- a/ansible/playbooks/dns/templates/db.reverse_0_0_10.j2
+++ b/ansible/playbooks/dns/templates/db.reverse_0_0_10.j2
@@ -1,17 +1,15 @@
 $TTL 86400
 {% set current_nameserver = nameservers | selectattr('name', 'equalto', inventory_hostname_short) | first %}
 
-@   IN  SOA     {{ current_nameserver.ns_name }}.{{ current_nameserver.zone }}. admin.{{ current_nameserver.zone }}. (
-        {{ "%Y%m%d%H" | strftime }}233  ; serial
+{{ current_nameserver.ns_name }}  IN  SOA     {{ current_nameserver.ns_name }}.{{ current_nameserver.zone }}. admin.{{ current_nameserver.zone }}. (
+        5        ; serial
         604800     ; refresh (1 week)
         86400      ; retry (1 day)
         2419200    ; expire (4 weeks)
         604800     ; minimum (1 week)
-	)
-
-; Define Name Servers
+        )
 {% for ns in nameservers %}
-@   IN  NS      {{ ns.name }}.{{ ns.zone }}.
+ NS {{ ns.ns_name }}.{{ ns.zone }}.
 {% endfor %}
 
 ; DNS PTR Records
