--- a/ansible/playbooks/dns/templates/db.reverse_0_0_10.j2
+++ b/ansible/playbooks/dns/templates/db.reverse_0_0_10.j2
@@ -9,18 +9,11 @@ $TTL 86400
         604800     ; minimum (1 week)
         )
 {% for ns in nameservers %}
- NS {{ ns.ns_name }}.{{ ns.zone }}.
+0.0.10.in-addr.arpa. NS {{ ns.ns_name }}.{{ ns.zone }}.
 {% endfor %}
 
 ; DNS PTR Records
 {% for record in dns_records | selectattr('zone', 'equalto', '0.0.10.in-addr.arpa.')  %}
-{{ record.record_value }}  IN  {{ record.type }}       {{ record.host }}
+{{ record.record_value }}  IN  {{ record.type }}       {{ record.host }}.trahan.dev.
 {% endfor %}
 
-8       IN      PTR     trahan-nas.trahan.dev.
-11      IN      PTR     trah-dev-01-container.trahan.dev.
-15      IN      PTR     trah-dns-01.
-32      IN      PTR     trah-dev-01.trahan.dev.
-99      IN      PTR     trah-up-plex.trahan.dev.
-254     IN      PTR     asus.trahan.dev.
-16      IN      PTR     trah-dev-03.trahan.dev.
