--- a/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
+++ b/ansible/playbooks/dns/templates/db.reverse_1_0_10.j2
@@ -9,10 +9,10 @@ $TTL 86400
         604800     ; minimum (1 week)
         )
 {% for ns in nameservers %}
- NS {{ ns.ns_name }}.{{ ns.zone }}.
+1.0.10.in-addr.arpa. NS {{ ns.ns_name }}.{{ ns.zone }}.
 {% endfor %}
 
 ; DNS PTR Records
 {% for record in dns_records | selectattr('zone', 'equalto', '1.0.10.in-addr.arpa.') %}
-{{ record.record_value }}  IN  {{ record.type }}       {{ record.host }}
+{{ record.record_value }}  IN  {{ record.type }}  {{ record.host }}.trahan.dev.
 {% endfor %}
